syntax = "proto3";
import  "object_message.proto";
package proto;

option go_package = "com.neep/goplatform/easymr/grpc/proto";

message TaskContext{
    map<string,ObjectItem> context =1;
}

